<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- global -->
    <string name="app_name">Local Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_change_dataset">Add or edit entry</string>
    <string name="title_activity_diaplay_item">Display enty</string>
    <string name="title_activity_get_current_location">Get current location</string>
    <string name="title_activity_set_time">SetTimeActivity</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="title_activity_notify">NotifyActivity</string>
    
    <!-- Buttons -->
    <string name="add_Entry">+ Add Entry</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="set_time">Set Time</string>
    <string name="set_date">Set Date</string>
    <string name="set_alert_time">Set Alarm</string>
    <string name="ok_delete">Yes, delete!</string>
    <string name="cancel_delete">No</string>
    <string name="set_alarm">Save</string>
    <string name="notification">It\'s time to do something!</string>
    <string name="current_location">Geo Location</string>
    <string name="cancel">Cancel</string>

    <!-- Text Field hints -->
    <string name="add_title">Add title</string>
    <string name="add_description">Add description</string>

    <!-- Text Field Headings -->
    <string name="title_heading">Title</string>
    <string name="description_heading">Description</string>
    <string name="set_time_heading">Set Time</string>
    <string name="get_current_location">Where am I ?</string>
    <string name="locate_me">Find me</string>
    <string name="notification_heading">Notification</string>

    <!-- Text Alerts -->
    <string name="confirm_delete">Do you really want to delete this entry?</string>
    <string name="entry_exists">An entry with this title already exists</string>
    <string name="empty_title">Cannot save entry with empty title</string>

    <string name="hello_world">Hello world!</string>
    <string name="determining_current_location">Determining your current Location. \n This
        could take a while....</string>

</resources>
