<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    <TextView
        android:id="@+id/entry_title_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/title_heading"
        android:textSize="24sp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/darkblue" />

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/add_title"
        android:inputType="textMultiLine"
        android:textSize="24sp" 
        android:layout_marginBottom="10dp">

        <requestFocus />
    </EditText>
    
    <TextView
        android:id="@+id/entry_description_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginLeft="5dp"
        android:text="@string/description_heading"
        android:textSize="24sp" 
        android:textColor="@color/darkblue"/>
    
    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:ems="10"
        android:textSize="24sp"
        android:gravity="top|left"
        android:hint="@string/add_description"
        android:inputType="textMultiLine" >

    </EditText>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginBottom="15dp"
        android:layout_margin="3dp">
        
       <Button 
            android:id="@+id/open_set_time_view"
            android:layout_width="155dp"
            android:layout_height="50dp"
            android:onClick="open_set_time"
            android:textSize="20sp"
            android:drawableLeft="@drawable/glyphicons_053_alarm"
            android:text="@string/set_alert_time"
             />

       <TextView
           android:id="@+id/set_time_heading"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:textSize="18sp" />
        
     </LinearLayout>
     
  <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:layout_marginBottom="15dp"
        android:layout_margin="3dp">
        
      <Button 
           android:id="@+id/get_location"
           android:layout_width="155dp"
           android:layout_height="50dp"
           android:drawableLeft="@drawable/glyphicons_233_direction"
           android:onClick="get_Location"
           android:text="@string/current_location"
            />
        
        </LinearLayout>
     
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2" >

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="saveEntry"
            android:textColor="#fff"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            android:text="@string/save" />

        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="back"
            android:textColor="#fff"
            android:layout_margin="5dp"
            android:textSize="20sp"
            android:background="@drawable/custom_button"
            android:text="@string/back" />
    </LinearLayout>

</LinearLayout>