<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DisplayItemActivity" >

    <TextView
        android:id="@+id/entry_title_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/title_heading"
        android:textSize="24sp"
        android:textColor="@color/darkblue" />
    
    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="24sp"
        android:layout_marginBottom="10dp" />
    
    <View android:id="@+id/separator" 
	 android:background="@color/darkblue" 
	 android:layout_width = "fill_parent"
	 android:layout_height="1dip"
	 android:layout_marginBottom="15dp"/>
    
    
    <TextView
        android:id="@+id/entry_description_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/description_heading"
        android:textSize="24sp" 
        android:textColor="@color/darkblue"/>
    
    <TextView
        android:id="@+id/description_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_marginBottom="15dp"
        android:ems="10"/>
    
    <View android:id="@+id/separator2" 
	 android:background="@color/darkblue" 
	 android:layout_width = "fill_parent"
	 android:layout_height="1dip"
	 android:layout_marginBottom="15dp"/>
    
    
    <TextView
        android:id="@+id/entry_notification_heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/notification_heading"
        android:textSize="24sp" 
        android:textColor="@color/darkblue"/>
    
    <TextView
        android:id="@+id/notification_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textSize="24sp"
        android:ems="10"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3" >

        <Button
            android:id="@+id/edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="edit_entry"
            android:text="@string/edit"
            android:textColor="#fff"
            android:layout_margin="3dp"
            android:textSize="20sp"
            android:background="@drawable/custom_button" />

        <Button
            android:id="@+id/delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="delete_entry"
            android:text="@string/delete"
            android:textColor="#fff"
            android:layout_margin="3dp"
            android:textSize="20sp"
            android:background="@drawable/custom_button" />
        
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="back"
            android:text="@string/back"
            android:textColor="#fff"
            android:layout_margin="3dp"
            android:textSize="20sp"
            android:background="@drawable/custom_button" />
    </LinearLayout>

</LinearLayout>
